config-root/namespaces/jx-production/learnk10s/learnk10s-svc.yaml
# Source: learnk10s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnk10s
  labels:
    chart: "learnk10s-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: learnk10s-learnk10s
